# khunghinh916

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt  run.py
docs/superpowers/plans/: 2026-07-01-blur-background-reframe.md  2026-07-01-blur-compose-manual-scale.md  2026-07-01-perf-optimizations.md
docs/superpowers/specs/: 2026-07-01-blur-background-reframe-design.md  2026-07-01-blur-compose-manual-scale-design.md
models/: README.md
src/khunghinh/: __init__.py  __main__.py  app.py  audio_vad.py  config.py  logging_setup.py
src/khunghinh/core/: __init__.py  analysis_result.py  camera_path.py  compositing.py  geometry.py  reframe_engine.py  scene_features.py  smoothing.py
src/khunghinh/detection/: __init__.py  asd_fusion.py  base.py  factory.py  haar_face.py  yunet_face.py
src/khunghinh/mediaio/: __init__.py  exporter.py  reader.py
src/khunghinh/tracking/: __init__.py  iou_tracker.py
src/khunghinh/ui/: __init__.py  analysis_worker.py  control_panel.py  main_window.py  preview_view.py  workers.py
tests/: test_analysis_result.py  test_asd_fusion.py  test_audio_vad.py  test_camera_path.py  test_compositing.py  test_config.py  test_exporter.py  test_face_detection.py  test_geometry.py  test_smoothing.py  test_tracking.py
